# datatchek

./: .gitignore  README.md  app.py  docker-compose.yml  requirements.txt  test_data.csv
.streamlit/: config.toml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: config.py  database.py  main.py
backend/app/api/: auth.py  connections.py  deps.py
backend/app/core/: connection_manager.py
backend/app/models/: __init__.py  anomaly.py  connection.py  report.py  trust_score.py  types.py  user.py
backend/app/schemas/: __init__.py  auth.py  connection.py  user.py
backend/app/tests/: conftest.py  test_auth.py  test_connections.py  test_security.py
backend/app/utils/: security.py
i18n/: translation.py  translations.py
rules/: rule_engine.py  rules_catalog.json  scoring_engine.py
utils/: advanced_visualization.py  column_detector.py  data_cleaner.py  executive_pdf_generator.py  files_naming.py  metrics_store.py  pdf_generator.py  validators.py  visualizations.py
